header main footer added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
 </head>
 
 <body>
-    <h2>lets explore panda ecommerse site </h2>
+    <header>
+
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
+
 
     <!-- bootstrap script bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
